// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applySnapshot(m, { x: "snapshotX", y: "snapshotY", array: [] }) 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "$modelType": "TestModel",
          "array": Array [],
          "x": "snapshotX",
          "y": "snapshotY",
        },
      ],
      "path": Array [],
      "type": "[/] $$applySnapshot({\\"x\\":\\"snapshotX\\",\\"y\\":\\"snapshotY\\",\\"array\\":[],\\"$modelType\\":\\"TestMo...) (id 0)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "snapshotX",
      "y": "snapshotY",
    },
  ],
]
`;

exports[`concurrent [m.setYAsync() / m.setXAsync()] 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setYAsync() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "",
      "y": "setYAsync +0",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsync() (id 1, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +0",
      "y": "setYAsync +0",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsync() (id 1, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +20",
      "y": "setYAsync +0",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setYAsync() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +20",
      "y": "setYAsync +50",
    },
  ],
]
`;

exports[`m.addtoArray({ a: "otherA" }), m.array[0].setA() 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        M2 {
          "$": Object {
            "a": "setA",
          },
          "$modelType": "SubModel",
        },
      ],
      "path": Array [],
      "type": "[/] addToArray({\\"$modelType\\":\\"SubModel\\",\\"$\\":{\\"a\\":\\"otherA\\"}}) (id 0)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [
        Object {
          "$modelType": "SubModel",
          "a": "otherA",
        },
      ],
      "x": "",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [
        "array",
        0,
      ],
      "type": "[/array/0] setA() (id 1)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [
        Object {
          "$modelType": "SubModel",
          "a": "setA",
        },
      ],
      "x": "",
      "y": "",
    },
  ],
]
`;

exports[`m.setX() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setX() (id 0)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setX",
      "y": "",
    },
  ],
]
`;

exports[`m.setXAsync() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsync() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +0",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsync() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +20",
      "y": "",
    },
  ],
]
`;

exports[`m.setXAsyncThrowAsync() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsyncThrowAsync() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsyncThrowAsync() (id 0, async) -error thrown-",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
]
`;

exports[`m.setXAsyncThrowSync() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsyncThrowSync() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsyncThrowSync() (id 0, async) -error thrown-",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
]
`;

exports[`m.setXAsyncWithEmptyFirstPart() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXAsyncWithEmptyFirstPart() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncWithEmptyFirstPart +20",
      "y": "",
    },
  ],
]
`;

exports[`m.setXThrow() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXThrow() (id 0)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXThrow",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXThrow() (id 0) -error thrown-",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXThrow",
      "y": "",
    },
  ],
]
`;

exports[`m.setXY() -> m.setX(), m.setY() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXY() (id 0)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXY starts",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXY() (id 0) >>> [/] setX() (id 1)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setX",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXY() (id 0) >>> [/] setY() (id 2)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setX",
      "y": "setY",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXY() (id 0)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXY ends",
      "y": "setY",
    },
  ],
]
`;

exports[`m.setXYAsync() -> m.setXAsync(), m.setYAsync() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsync() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXYAsync starts",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsync() (id 0, async) >>> [/] setXAsync() (id 1, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +0",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsync() (id 0, async) >>> [/] setXAsync() (id 1, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +20",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsync() (id 0, async) >>> [/] setYAsync() (id 2, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +20",
      "y": "setYAsync +0",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsync() (id 0, async) >>> [/] setYAsync() (id 2, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsync +20",
      "y": "setYAsync +50",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsync() (id 0, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXYAsync ends",
      "y": "setYAsync +50",
    },
  ],
]
`;

exports[`m.setXYAsyncThrowAsync() -> m.setXYAsyncThrowAsync() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsyncThrowAsync() (id 0, async) >>> [/] setXAsyncThrowAsync() (id 1, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsyncThrowAsync() (id 0, async) >>> [/] setXAsyncThrowAsync() (id 1, async) -error thrown-",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsyncThrowAsync() (id 0, async) -error thrown-",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
]
`;

exports[`m.setXYAsyncThrowSync() -> m.setXAsyncThrowSync() 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsyncThrowSync() (id 0, async) >>> [/] setXAsyncThrowSync() (id 1, async)",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsyncThrowSync() (id 0, async) >>> [/] setXAsyncThrowSync() (id 1, async) -error thrown-",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
  Array [
    Object {
      "args": Array [],
      "path": Array [],
      "type": "[/] setXYAsyncThrowSync() (id 0, async) -error thrown-",
    },
    Object {
      "$modelType": "TestModel",
      "array": Array [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
]
`;
